# pyqt5_Codemy

./: .gitignore  README.md  combo.py  deck.ui  formy.py  main.py  pyproject.toml  requirements.txt  todo2.py
Cod_33_Colors_Menubar/: Uv.py  colors.py  colors.ui  secondWindow.ui
Cod_34_Calendar_Lcd_Menu/: LCD_Window.ui  calendar.py  calendar.ui
Cod_36_MdiArea/: win.py  win.ui
Cod_38_Translator/: ComboBox.py  Parse.md  Translator.md  Translator.py  Translator.ui  Translator_2.py  Translator_speech.py  Translator_speech.ui  list_and_test_Voices.py
Cod_40_Slider/: Slider_Colors.py  Slider_Colors.ui
Practice/: listComprehension.py
