[project]
name = "pyqt5-codemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "googletrans==4.0.0rc1",
    "gtts>=2.5.4",
    "pip>=25.3",
    "playsound==1.2.2",
    "pyobjc>=11.1",
    "pyqt5>=5.15.11",
    "pyttsx3>=2.99",
]
